test/libsolidity/syntaxTests/literals/hex_string_duplicate_underscore_yul.sol
contract C {
    function f() public pure {
        assembly {
            let x := hex"12__34";
        }
    }
}
// ----
// ParserError 1465: (84-92): Illegal token: Invalid use of number separator '_'.
